# Mars-Bot-rs

./: Cargo.toml  README.md  flake.nix  taplo.toml
.github/workflows/: release.yml
src/: bot.rs  cli.rs  config.rs  main.rs
src/db/: binary.rs  mod.rs  sled.rs  sleddb.rs  sqlite.rs
src/utils/: constant.rs  convert.rs  mod.rs
