[package]
edition = "2021"
name = "mars-bot-rs"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
assert2 = "0.3.14"
clap = { version = "4.5.13", features = ["derive"] }
config-file2 = "0.3.2"
die-exit = { version = "0.5.0", features = ["red"] }
futures-util = "0.3.30"
home = "0.5.9"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
# sea-orm      = { version = "1.0.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-json"] }
# sea-query    = { version = "0.31.0", features = ["backend-sqlite", "with-json", "derive"] }
serde = { version = "1.0.204", features = ["derive"] }
teloxide = "0.12.2"
tokio = { version = "1.39.2", features = ["full"] }
url = "2.5.2"
sha3 = "0.10.8"

[[bin]]
name = "mars-bot"
path = "src/main.rs"
