[package]
authors       = ["lxl66566 <lxl66566@gmail.com>"]
categories    = ["api-bindings"]
description   = "Telegram bot to detect repeated images"
documentation = "https://github.com/lxl66566/Mars-Bot-rs"
edition       = "2021"
keywords      = ["telegram", "bot", "Mars"]
license       = "Apache-2.0"
name          = "mars-bot-rs"
repository    = "https://github.com/lxl66566/Mars-Bot-rs"
version       = "0.1.0"


[dependencies]
anyhow            = "1.0.93"
assert2           = "0.3.14"
async-stream      = "0.3.6"
bytes             = "1.8.0"
clap              = { version = "4.5.21", features = ["derive"] }
config-file2      = "0.3.2"
die-exit          = { version = "0.5.0", features = ["red"] }
dyn-fmt           = "0.4.3"
futures-util      = "0.3.30"
hex               = "0.4.3"
home              = "0.5.11"
log               = "0.4.22"
openssl           = { version = "0.10.68", features = ["vendored"] }
pretty_env_logger = "0.5.0"
rusqlite          = { version = "0.32.1", features = ["bundled"], optional = true }
serde             = { version = "1.0.209", features = ["derive"] }
sha3              = "0.10.8"
sled_crate        = { package = "sled", version = "0.34.7", features = ["compression"], optional = true }
teloxide          = { version = "0.13.0" }
tokio             = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
uluru             = "3.1.0"
# teloxide     = { version = "0.12.2", features = ["rustls"] }
# sea-orm      = { version = "1.0.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-json"] }
# sea-query    = { version = "0.31.0", features = ["backend-sqlite", "with-json", "derive"] }


[dev-dependencies]
tempfile = "3.14.0"

[[bin]]
name = "mars-bot"
path = "src/main.rs"

[features]
default = ["sled"]
sled    = ["sled_crate"]
sqlite  = ["rusqlite"]

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"
strip     = true
